# libzip

./: .gitattributes  .gitignore  Archive.cpp  Archive.h  Arguments.cpp  Arguments.h  CMakeLists.txt  Constants.h  File.h  LICENSE  README.md  Stat.cpp  Stat.h  constants.d.ts  index.d.ts  index.js  main.cpp  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
core/: ErrorFormatter.ts  Uint8ArrayReader.ts  index.ts  tsconfig.json
core/preprocessor/: PreprocessorTokenizer.ts
scripts/: defines.ts  index.ts  tsconfig.json
src/: Archive.cpp  Archive.h  Arguments.cpp  Arguments.h  CMakeLists.txt  Constants.cpp  Constants.h  File.cpp  Source.cpp  Source.h  Stat.cpp  main.cpp
test/: .gitignore  index.ts
